--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </nav>
 
-      <h4>홈 입니다.</h4>
+      <h4>Home Page</h4>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
