--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                   <li><a class="dropdown-item" href="#">Action</a></li>
                   <li><a class="dropdown-item" href="#">Button</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">Here</a></li>
                 </ul>
               </li>
               <li class="nav-item">
